feat: add crud for gamification
